public/assignment/css/style.css
/**********************************************************************************************************************/

/* Glyphicons */

.plusicon {
    font-size: 16px;
    color: blue;
    margin-left: 5px;
}

.okicon {
    font-size: 16px;
    color: green;
    margin-left: 5px;
}

.removeicon {
    font-size: 16px;
    color: red;
    margin-left: 5px;
}

.pencilicon {
    font-size: 16px;
    color: yellow;
    margin-left: 5px;
}

.justifyicon {
    font-size: 16px;
    color: black;
    margin-left: 5px;
}

/**********************************************************************************************************************/

/* Table */

.theadrow {
    background-color: #cccccc;
}

/**********************************************************************************************************************/

/* Table Bordered */

.table-bordered>tbody>tr>td {
    vertical-align: middle;
}

/**********************************************************************************************************************/

/* Row */

.fieldrow {
    margin-top: 10px;
}

/**********************************************************************************************************************/

/* Div */

.form-div {
    border: 1px solid #ddd;
}

.form-div-inner {
    margin: 10px;
}

/**********************************************************************************************************************/

